# appointmentbooking-monorepo

./: .dockerignore  .env.example  .eslintrc.cjs  .gitignore  .lintstagedrc  .replit  ADVANCED_MARKET_EXPANSION_DOMINANCE_STRATEGY.md  ADVANCED_MARKET_EXPANSION_IMPLEMENTATION_COMPLETE.md  ADVANCED_MONITORING_SETUP.md  ADVANCED_PERFORMANCE_OPTIMIZATION_IMPLEMENTATION_COMPLETE.md  AI_TOOLS_IMPLEMENTATION_COMPLETE.md  ALL_DOCUMENTATION_INDEX.md  API_DOCUMENTATION.md  APPOINTMENTBOOKING_COZA_BROWSER_TESTING_FRAMEWORK.md  APPOINTMENTBOOKING_COZA_BROWSER_TESTING_PROCEDURES.md  APPOINTMENTBOOKING_COZA_CLOUDFLARE_DEPLOYMENT_EXECUTION_LOG.md  APPOINTMENTBOOKING_COZA_CLOUDFLARE_DEPLOYMENT_FINAL_STATUS.md  APPOINTMENTBOOKING_COZA_CLOUDFLARE_DEPLOYMENT_STATUS.md  APPOINTMENTBOOKING_COZA_CLOUDFLARE_DEPLOYMENT_SUCCESS_LOG.md  APPOINTMENTBOOKING_COZA_COMPREHENSIVE_DEPLOYMENT_TESTING.md  APPOINTMENTBOOKING_COZA_DEPLOYMENT_EXECUTION_GUIDE.md  APPOINTMENTBOOKING_COZA_DEPLOYMENT_EXECUTION_GUIDE_CLOUDFLARE.md  APPOINTMENTBOOKING_COZA_DEPLOYMENT_PLAN.md  APPOINTMENTBOOKING_COZA_DEPLOYMENT_SCRIPT.sh  APPOINTMENTBOOKING_COZA_DEPLOYMENT_SCRIPT_CLOUDFLARE.sh  APPOINTMENTBOOKING_COZA_DEPLOYMENT_STATUS.md  APPOINTMENTBOOKING_COZA_DNS_CONFIGURATION.md  APPOINTMENTBOOKING_COZA_DNS_CONFIGURATION_CLOUDFLARE.md  APPOINTMENTBOOKING_COZA_ENTERPRISE_DEPLOYMENT_CERTIFICATION.md  APPOINTMENTBOOKING_COZA_ENTERPRISE_DEPLOYMENT_FRAMEWORK.md  APPOINTMENTBOOKING_COZA_FINAL_DEPLOYMENT_READINESS_ASSESSMENT.md  APPOINTMENTBOOKING_COZA_FINAL_PRODUCTION_READINESS_ASSESSMENT.md  APPOINTMENTBOOKING_COZA_OFFICIAL_DEPLOYMENT_CERTIFICATION.md  APPOINTMENTBOOKING_COZA_OPERATIONAL_RUNBOOK.md  APPOINTMENTBOOKING_COZA_OPERATIONAL_STATUS_REPORT.md  APPOINTMENTBOOKING_COZA_OPERATIONS_HANDOVER.md  APPOINTMENTBOOKING_COZA_POST_BUILD_VERIFICATION_COMPLETE.md  APPOINTMENTBOOKING_COZA_POST_DEPLOYMENT_VALIDATION_PROTOCOL.md  APPOINTMENTBOOKING_COZA_TECHNICAL_AUDIT_REPORT.md  APPOINTMENTBOOKING_COZA_TYPESCRIPT_COMPILATION_ERROR_RESOLUTION_REPORT.md  (+316 more)
.github/: DEPLOYMENT_WORKFLOW_UPDATE.md  README.md  copilot-app-modernization.md  copilot-instructions.md  pull_request_template.md
ai-tools/: README.md
ai-tools/tools/csv-ai-analyzer/: Dockerfile  pyproject.toml
ai-tools/tools/csv-ai-analyzer/src/: csv_analyzer.py
ai-tools/tools/real-time-translator/: Dockerfile  pyproject.toml
ai-tools/tools/real-time-translator/src/: translator.py
analysis-results/: error-summary-2026-02-01T13-01-53-244Z.json  typescript-analysis-report-2026-02-01T13-01-53-244Z.md  typescript-error-analysis-2026-02-01T13-01-53-244Z.json
apps/: deployment-log-deploy-20260107-162112.txt
docs/: API_SPECIFICATION.md  BOOKING_WIZARD_COMPLETE.md  CLOUDFLARE_DASHBOARD_DEPLOYMENT_GUIDE.md  CLOUDFLARE_PAGES_DEPLOYMENT_GUIDE.md  COMPLETE_DELIVERY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_GUIDE_PHASE_4.md  DEVELOPMENT.md  (+33 more)
(+1092 files in other folders)
